- reverted logic to AND label